Fixed broken CSS for updated remote model

--- a/assets/stylesheets/landing-pages-admin.scss
+++ b/assets/stylesheets/landing-pages-admin.scss
@@ -237,7 +237,7 @@
       }
     }
 
-    a.d-modal-cancel {
+    .d-modal-cancel {
       margin-left: auto;
     }
   }
